<resources>
    <string name="app_name">TeoriaInformacion</string>
    <string name="teor_a_de_la_informaci_n">Teoría de la Información</string>
    <string name="wav">Ej) 1 - .WAV</string>
    <string name="decode_bmp">EJ) 2 - .BMP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>
    <string name="seleccionar_archivo">Seleccionar Archivo</string>
    <string name="respuesta">Respuesta:</string>
    <string name="id">ID:</string>
    <string name="tama_o_del_archivo">Tamaño del Archivo:</string>
    <string name="formato">Formato:</string>
    <string name="id_subchunk">ID subchunk:</string>
    <string name="tama_o_subchunk">Tamaño Subchunk:</string>
    <string name="pcm">PCM:</string>
    <string name="numero_de_canales">Numero de Canales</string>
    <string name="tama_o_subchunk2">Tamaño Subchunk2:</string>
    <string name="id_subchunk2">ID Subchunk2:</string>
    <string name="bits_per_sample">Bits per Sample:</string>
    <string name="blockalign">Blockalign:</string>
    <string name="byterate">Byterate:</string>
    <string name="samplerate">Samplerate:</string>
    <string name="por_favor_seleccione_un_archivo_para_obtener_una_respuesta">Por favor seleccione un archivo para obtener una respuesta</string>
    <string name="entrop_a_y_redundancia">Ej) 3 - EyR</string>
    <string name="archivo_zip">.ZIP</string>
    <string name="archivo_rtf">.RTF</string>
    <string name="archivo_odt">.ODT</string>
    <string name="archivo_docx">.DOCX</string>
    <string name="archivo_txt">.TXT</string>
    <string name="ej_4_canales_de_transmisi_n">Ej) 4 - Canales de Transmisión</string>
    <string name="ej_7_comparar_cadenas">Ej) 7 - Comparar Cadenas</string>
    <string name="primer_cadena">Primer Cadena</string>
    <string name="segunda_cadena">Segunda Cadena</string>
    <string name="ej_8_validar_cuit_cuil">Ej) 8 - Validar CUIT/CUIL</string>
    <string name="validar_cuit_cuil">Validar CUIT/CUIL</string>
    <string name="xxx_xxx_xxx_xxx">XXX.XXX.XXX.XXX</string>
    <string name="xxx">XXX</string>
    <string name="cliente_servidor">Ej) 9 - Cliente-Servidor</string>
    <string name="conectar">Conectar y enviar cadena</string>
    <string name="cadena_a_enviar_al_servidor">Cadena a enviar al servidor</string>
    <string name="ej_5_archivos_fijos_variables">Ej) 5 - Archivos Fijos Variables</string>
    <string name="fijo">Fijo</string>
    <string name="variable">Variable</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="generar_archivo">Generar archivo Fijo y Variable:</string>
    <string name="_1_estudios_primarios">1. Estudios Primarios:</string>
    <string name="_2_estudios_secundarios">2. Estudios Secundarios:</string>
    <string name="_3_estudios_universitarios">3. Estudios Universitarios:</string>
    <string name="_4_vivienda_propia">4. Vivienda Propia:</string>
    <string name="_5_obra_social">5. Obra Social</string>
    <string name="_7_participa_en_voluntariado">7. Participa en Voluntariado:</string>
    <string name="_6_trabaja">6. Trabaja:</string>
    <string name="direccion">Direccion</string>
    <string name="nombre_y_apellido">Nombre y Apellido</string>
    <string name="_8_hijos">8. Hijos:</string>
    <string name="dni">DNI</string>
    <string name="guardar">Guardar</string>
    <string name="_20_registros">20 Registros</string>
    <string name="ver_guardados">Ver guardados</string>
    <string name="ver_variable">Ver Variable</string>
    <string name="ver_fijo">Ver Fijo</string>
    <string name="aceptar">Aceptar</string>
</resources>
